Remove course color